src/client/components/app-core/variables.css
:root {
  /* COLORS */
  --brand-yellow: #ffe400;
  --active-yellow: #e9d100;
  --html-blue: blue;
  --active-blue: #0005be;
  --bg-pastel: #fffeca;
  --paper: #fffed9;
  --black: #222222;
  --off-black: #555555;
  --dim: #888888;
  --very-dim: #cccccc;
  --fog: #f6f6f6;
  --white: #ffffff;
  --soft-red: #ff3e3e;

  /* FONTS */
  --font-sans: 'apercu', Arial, sans-serif;

  /* SPACING */
  --spacing-tiny: 5px;
  --spacing-smaller: 10px;
  --spacing-small: 15px;
  --spacing-medium: 25px;
  --spacing-large: 35px;
  --spacing-larger: 55px;
  --spacing-big: 75px;
  --spacing-bigger: 110px;
  --spacing-huge: 150px;

  /* COMPONENTS */
  --app-header-height: 3.125rem; /* 50px */

  /* Z-INDEXES */
  --z-index-high: 2;
  --z-index-low: 1;

  /* GRID */
  --grid-page: 1 / 51;
  --grid-page-left: 1 / 26;
  --grid-page-right: 26 / 51;
  --grid-content: 2 / 50;
  --grid-content-left: 2 / 26;
  --grid-content-right: 26 / 51;
}

@media (min-width: 1100px) {
  :root {
    --app-header-height: 4.0625rem; /* 65px */
  }
}

